--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+#Other
+/.git/
+/.idea/
+/build/
+/nbproject/
+/log/
+/logs/
+/target/
+*.iml
+/lib/
+nb-configuration.xml
+db-access.iml
+/src/main/resources/local/
+/src/test/resources/local/
+/src/test/resources/data-json2
