Modification de fichier pom.xml avec externalisation des unités de persistance et changement du groupId ainsi que de la version

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ hs_err_pid*
 /lib/
 nb-configuration.xml
 db-access.iml
+*.iml
+
 /src/main/resources/local/
 /src/test/resources/local/
-/src/test/resources/data-json2
+/src/main/resources/dev/
+/src/test/resources/dev/
