--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.bootcamp.agroppm</groupId>
     <artifactId>db-access</artifactId>
     <packaging>jar</packaging>
-    <version>1.2</version>
+    <version>1.0-SNAPSHOT</version>
     <name>db-access</name>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -110,7 +110,7 @@
             </build>
         </profile>
     </profiles>
-    
+
     <build>
         <finalName>db-access</finalName>
         <plugins>
