--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
             <version>2.1</version>
             <!--<type>jar</type>-->
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -82,13 +90,12 @@
             <build>
                 <resources>
                     <resource>
-                        <directory>src/main/resources</directory>
+                        <directory>src/main/resources/local</directory>
                         <filtering>true</filtering>
                     </resource>
                     <resource>
                         <directory>${config.home}</directory>
                     </resource>
-
                 </resources>
             </build>
         </profile>
